...
        currentQuestionIndex += 1
    }
    
    private func showNextQuestionOrResults() {
        if self.isLastQuestion() {
            
            viewController?.show(quiz: QuizResultsViewModel(title: "Этот раунд окончен!",
                                                            text: makeResultsMessage(),
                                                            buttonText: "Сыграть ещё раз"))
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
        }
...
